# synthetic-web-search-mcp-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  search.rs
