[package]
name = "synthetic-web-search-mcp-rs"
version = "0.1.0"
edition = "2024"
description = "MCP server for web search using Synthetic API"
license = "MIT"
repository = "https://github.com/Syoongy/synthetic-web-search-mcp-rs"
authors = ["Fan Syong Yue <mastersyong@gmail.com>"]

[dependencies]
rmcp = { version = "0.17.0", features = ["transport-io", "server", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0"
